@@ -24,11 +24,13 @@
 
 (c-lines "#include <postgres_ext.h>~%")
 
+
 (def-c-type Oid uint)
 
-(defconstant NAMEDATALEN 64)
-(defconstant MAX-PARAM 64)
-(defconstant BUFSIZ 1024)
+(eval-when (load compile eval)
+  (defconstant NAMEDATALEN 64)
+  (defconstant MAX-PARAM 64)
+  (defconstant BUFSIZ 1024))
 
 (c-lines "#include <libpq-fe.h>~%")
 
