@@ -1,5 +1,11 @@
 2004-09-26  Sam Steingold  <sds@gnu.org>
 
+	* modules/bindings/win32/win32.lisp, modules/bindings/glibc/linux.lisp:
+	* modules/postgresql/postgresql.lisp, modules/netica/netica.lisp:
+	reverted the broken 2004-09-09 patch
+
+2004-09-26  Sam Steingold  <sds@gnu.org>
+
 	FILL-STREAM no longer flattens all space inside S-expressions
 	* fill-out.lisp (fill-stream): new slot INSIDE-SEXP
 	(fill-stream-flush-buffer, stream-write-char): when INSIDE-SEXP,
